[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/gui/sound_symbol.png" type="Texture" id=2]
[ext_resource path="res://sprites/gui/music_symbol.png" type="Texture" id=3]
[ext_resource path="res://sprites/gui/back_normal.png" type="Texture" id=4]
[ext_resource path="res://sprites/gui/back_pressed.png" type="Texture" id=5]
[ext_resource path="res://sprites/gui/back_hover.png" type="Texture" id=6]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 100.0
margin_top = 90.0
margin_right = 499.0
margin_bottom = 266.0

[node name="SoundSpr" type="Sprite" parent="Panel"]
position = Vector2( 50.7942, 41.608 )
texture = ExtResource( 2 )

[node name="MusicSpr" type="Sprite" parent="Panel"]
position = Vector2( 50.7942, 121.608 )
texture = ExtResource( 3 )

[node name="SoundSlider" type="HSlider" parent="Panel"]
margin_left = 92.0097
margin_top = 1.75095
margin_right = 237.01
margin_bottom = 40.751
rect_scale = Vector2( 2, 2 )
min_value = -100.0
max_value = 20.0
ticks_on_borders = false

[node name="MusicSlider" type="HSlider" parent="Panel"]
margin_left = 92.0097
margin_top = 81.7509
margin_right = 237.01
margin_bottom = 120.751
rect_scale = Vector2( 2, 2 )
min_value = -100.0
max_value = 20.0
value = -10.0
ticks_on_borders = false

[node name="BackBtn" type="TextureButton" parent="."]
margin_left = 99.24
margin_top = 268.792
margin_right = 181.24
margin_bottom = 311.792
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[connection signal="value_changed" from="Panel/SoundSlider" to="." method="change_sound"]
[connection signal="value_changed" from="Panel/MusicSlider" to="." method="change_music"]
[connection signal="pressed" from="BackBtn" to="." method="on_back"]
